# Ray-Tracer

./: CMakeLists.txt  Color.cpp  Color.h  FileManagement.cpp  FileManagement.h  README.md  Scene-1-not completed.ppm  Vec3.cpp  Vec3.h  ViewingWindow.cpp  ViewingWindow.h  infile.txt  main.cpp  rainbow-stripes.ppm  readme  scene-0.ppm
Helper/: Helper.cpp  Helper.h
SceneVariables/: Bkgcolor.cpp  Bkgcolor.h  Ellipsoid.cpp  Ellipsoid.h  Eye.cpp  Eye.h  Imsize.cpp  Imsize.h  Light.cpp  Light.h  Mtcolor.cpp  Mtcolor.h  Objects.cpp  Objects.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Updir.cpp  Updir.h  Vertex.cpp  Vertex.h  Vfov.cpp  Vfov.h  ViewDir.cpp  ViewDir.h  Vn.cpp  Vn.h  Vt.cpp  Vt.h
